--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <BR></BR>
     <div class="games">
-        <form action="https://tinyurl.com/patrongaming">
+        <form action="https://patrong100.github.io/yungballer/">
             <button class="button contact" type="submit">HOME</button>
             </form>
 
